--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
   </div>
 
   <div class="contact">
-    <a class="btn" href="mailto:dayka0446@gmail.com">Email Me</a>
-    <a class="ghost" href="https://www.tiktok.com/@dayka_seven" target="_blank">TikTok</a>
-    <a class="ghost" href="#">LinkedIn</a>
-    <a class="ghost" href="#">WhatsApp</a>
-  </div>
+  <a class="btn" href="mailto:dayka0446@gmail.com">Email Me</a>
+  <a class="ghost" href="https://www.tiktok.com/@dayka_seven" target="_blank">TikTok</a>
+  <a class="ghost" href="https://www.linkedin.com/in/ritysak-phai-5a09993a9/" target="_blank">LinkedIn</a>
+  <a class="ghost" href="https://wa.me/85569779566" target="_blank">WhatsApp</a>
+</div>
 </section>
 
 </main>
