--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
   </div>
 
   <nav class="nav">
-    <a href="#work">Work</a>
-    <a href="#about">About</a>
-    <a href="#contact" class="btn">Contact</a>
-  </nav>
+  <a href="#experience">Experience</a>
+  <a href="#work">Work</a>
+  <a href="#about">About</a>
+  <a href="#contact" class="btn">Contact</a>
+</nav>
 </header>
 
 <main>
@@ -55,6 +56,73 @@
     <span class="badge">Motion Graphics</span>
     <span class="badge">3D Design</span>
     <span class="badge">Brand Identity</span>
+  </div>
+</section>
+
+<!-- EXPERIENCE -->
+<section id="experience" class="section">
+  <div class="sectionHead">
+    <h3>Experience</h3>
+    <p>Studios, agencies, and brands I’ve worked with.</p>
+  </div>
+
+  <div class="exp">
+
+    <div class="expItem">
+      <div class="expTop">
+        <strong>ithinkasia</strong>
+        <span>2019 – 2020 • Animator (Full-time)</span>
+      </div>
+      <p>
+        Worked on animation projects delivered to global entertainment clients including Netflix, Disney, and Warner Bros through studio pipelines.
+      </p>
+    </div>
+
+    <div class="expItem">
+      <div class="expTop">
+        <strong>Hong Leong Bank <em>(via Minimalist Creatives)</em></strong>
+        <span>2020 – 2021 • Motion Graphic Designer (Freelance)</span>
+      </div>
+      <p>
+        Produced motion graphics, digital visuals, and branded assets for marketing and communication campaigns.
+      </p>
+    </div>
+
+    <div class="expItem">
+      <div class="expTop">
+        <strong>DKSH (Diethelm Keller Siber Hegner)</strong>
+        <span>2021 – 2023 • Senior Graphic Designer (Full-time)</span>
+      </div>
+      <p>
+        Delivered monthly design content, animations, 3D props, event mockups, and brand visuals for multiple brands (Hiruscar, Avène, Tiger Balm, Berocca, Tylenol, and more).
+      </p>
+    </div>
+
+    <div class="expItem">
+      <div class="expTop">
+        <strong>Influence Agency</strong>
+        <span>2023 – 2025 • Senior Graphic Designer (Full-time)</span>
+      </div>
+      <p>
+        Handled graphic design, motion graphics, 3D animation, and video editing for large-scale campaigns and brands (Liberty Carz, Miss Cosmo 2025, Vigor Energy Drink, and more).
+      </p>
+    </div>
+
+    <div class="expItem">
+      <div class="expTop">
+        <strong>CTRL Z Agency <em>(Startup)</em></strong>
+        <span>2025 – Present • Founder & Art Director</span>
+      </div>
+      <p>
+        Founded and lead CTRL Z Agency, managing creative and operational aspects of the business.
+      </p>
+      <ul class="expBullets">
+        <li>Recruiting and leading a creative team</li>
+        <li>Writing and planning creative content and concepts</li>
+        <li>Overseeing branding, design, motion, and 3D direction</li>
+      </ul>
+    </div>
+
   </div>
 </section>
 
