--- a/index.html
+++ b/index.html
@@ -1,337 +1,258 @@
-:root{
-  --bg:#000;
-  --text:#f4f4f8;
-  --muted:#b7b7c7;
-  --line: rgba(255,255,255,.14);
-}
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Ritysak — Designer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-*{ box-sizing:border-box; }
-html{ scroll-behavior:smooth; }
+<body>
 
-body{
-  margin:0;
-  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
-  background: var(--bg);
-  color: var(--text);
-  overflow-x:hidden;
-  position:relative;
-}
+  <!-- Cursor Glow -->
+  <div class="cursorGlow" id="cursorGlow"></div>
 
-a{ color:inherit; text-decoration:none; }
+  <!-- HEADER -->
+  <header class="top">
+    <div class="brand">
+      <img class="avatar" src="image/profile.png" alt="Ritysak profile photo" />
+      <div class="name">
+        <h1>Ritysak</h1>
+        <p>Motion • 3D • Design</p>
+      </div>
+    </div>
 
-/* ===== Moving Red/Blue Glow Background ===== */
-body::before{
-  content:"";
-  position:fixed;
-  top:-50%;
-  left:-50%;
-  width:200%;
-  height:200%;
-  background:
-    radial-gradient(circle at 30% 30%, rgba(255,0,60,.25), transparent 40%),
-    radial-gradient(circle at 70% 70%, rgba(0,120,255,.25), transparent 40%);
-  filter: blur(120px);
-  animation: rgbMove 18s linear infinite alternate;
-  z-index:-1;
-}
+    <nav class="nav">
+      <a href="#experience">Experience</a>
+      <a href="#work">Work</a>
+      <a href="#about">About</a>
+      <a href="#brands">Brands</a>
+      <a href="#contact" class="btn">Contact</a>
+    </nav>
+  </header>
 
-@keyframes rgbMove{
-  0%{transform: translate(0,0);}
-  50%{transform: translate(20%,10%);}
-  100%{transform: translate(-15%,20%);}
-}
+  <main>
 
-/* ===== Cursor Glow ===== */
-.cursorGlow{
-  position:fixed;
-  width:420px;
-  height:420px;
-  transform: translate(-50%, -50%);
-  pointer-events:none;
-  z-index:-1;
-  background: radial-gradient(circle, rgba(255,0,60,.18), transparent 60%),
-              radial-gradient(circle, rgba(0,120,255,.16), transparent 60%);
-  filter: blur(40px);
-}
+    <!-- HERO -->
+    <section class="hero">
+      <h2>Design that grabs attention and drives results.</h2>
+      <p>
+        I create motion graphics, 3D visuals, and branding that help businesses
+        stand out, tell their story, and connect with their audience.
+      </p>
 
-/* ===== HEADER ===== */
-.top{
-  position:sticky;
-  top:0;
-  z-index:50;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:18px 20px;
-  border-bottom:1px solid rgba(255,255,255,.08);
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
-  background: rgba(0,0,0,.35);
-}
+      <div class="heroActions">
+        <a class="btn" href="#work">View Portfolio</a>
+        <a class="ghost" href="#contact">Let’s Work Together</a>
+      </div>
 
-.brand{ display:flex; align-items:center; gap:14px; }
+      <div class="badges">
+        <span class="badge">Motion Graphics</span>
+        <span class="badge">3D Design</span>
+        <span class="badge">Brand Identity</span>
+      </div>
+    </section>
 
-.avatar{
-  width:50px;
-  height:50px;
-  border-radius:50%;
-  object-fit:cover;
-  border:2px solid rgba(255,255,255,.18);
-}
+    <!-- EXPERIENCE -->
+    <section id="experience" class="section">
+      <div class="sectionHead">
+        <h3>Experience</h3>
+        <p>Studios, agencies, and brands I’ve worked with.</p>
+      </div>
 
-.name h1{ margin:0; font-size:18px; }
-.name p{ margin:0; color:var(--muted); font-size:13px; }
+      <div class="exp">
 
-.nav{ display:flex; gap:14px; align-items:center; flex-wrap:wrap; }
-.nav a{ color:var(--muted); }
-.nav a:hover{ color:#fff; }
+        <div class="expItem">
+          <div class="expTop">
+            <strong>ithinkasia</strong>
+            <span>2019 – 2020 • Animator (Full-time)</span>
+          </div>
+          <p>
+            Worked on animation projects delivered to global entertainment clients including Netflix, Disney, and Warner Bros through studio pipelines.
+          </p>
+        </div>
 
-/* ===== BUTTONS ===== */
-.btn{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  padding:10px 16px;
-  border-radius:14px;
-  background:#fff;
-  color:#000;
-  font-weight:800;
-}
+        <div class="expItem">
+          <div class="expTop">
+            <strong>Hong Leong Bank <em>(via Minimalist Creatives)</em></strong>
+            <span>2020 – 2021 • Motion Graphic Designer (Freelance)</span>
+          </div>
+          <p>
+            Produced motion graphics, digital visuals, and branded assets for marketing and communication campaigns.
+          </p>
+        </div>
 
-.ghost{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  padding:10px 16px;
-  border-radius:14px;
-  border:1px solid rgba(255,255,255,.18);
-  background: rgba(255,255,255,.06);
-}
-.ghost:hover{ background: rgba(255,255,255,.10); }
+        <div class="expItem">
+          <div class="expTop">
+            <strong>DKSH (Diethelm Keller Siber Hegner)</strong>
+            <span>2021 – 2023 • Senior Graphic Designer (Full-time)</span>
+          </div>
+          <p>
+            Delivered monthly design content, animations, 3D props, event mockups, and brand visuals for multiple brands (Hiruscar, Avène, Tiger Balm, Berocca, Tylenol, and more).
+          </p>
+        </div>
 
-/* ===== MAIN ===== */
-main{
-  max-width:1100px;
-  margin:0 auto;
-  padding:40px 20px 90px;
-}
+        <div class="expItem">
+          <div class="expTop">
+            <strong>Influence Agency</strong>
+            <span>2023 – 2025 • Senior Graphic Designer (Full-time)</span>
+          </div>
+          <p>
+            Handled graphic design, motion graphics, 3D animation, and video editing for large-scale campaigns and brands (Liberty Carz, Miss Cosmo 2025, Vigor Energy Drink, and more).
+          </p>
+        </div>
 
-/* ===== HERO ===== */
-.hero{ padding:56px 0 30px; }
-.hero h2{ margin:0 0 10px; font-size:40px; line-height:1.1; }
-.hero p{
-  margin:0 0 18px;
-  color:var(--muted);
-  max-width:650px;
-  line-height:1.6;
-}
-.heroActions{ display:flex; gap:12px; flex-wrap:wrap; }
+        <div class="expItem">
+          <div class="expTop">
+            <strong>CTRL Z Agency <em>(Startup)</em></strong>
+            <span>2025 – Present • Founder & Art Director</span>
+          </div>
+          <p>
+            Founded and lead CTRL Z Agency, managing creative and operational aspects of the business.
+          </p>
+          <ul class="expBullets">
+            <li>Recruiting and leading a creative team</li>
+            <li>Writing and planning creative content and concepts</li>
+            <li>Overseeing branding, design, motion, and 3D direction</li>
+          </ul>
+        </div>
 
-/* Badges */
-.badges{ display:flex; gap:10px; flex-wrap:wrap; margin-top:14px; }
-.badge{
-  font-size:12px;
-  color:var(--muted);
-  border:1px solid rgba(255,255,255,.14);
-  background: rgba(255,255,255,.05);
-  padding:8px 12px;
-  border-radius:999px;
-}
+      </div>
+    </section>
 
-/* ===== SECTIONS ===== */
-.section{ padding:56px 0; }
-.sectionHead{ margin-bottom:18px; }
-.sectionHead h3{ margin:0 0 8px; font-size:22px; }
-.sectionHead p{ margin:0; color:var(--muted); line-height:1.6; }
+    <!-- PORTFOLIO -->
+    <section id="work" class="section">
+      <div class="sectionHead">
+        <h3>Selected Work</h3>
+        <p>Motion, 3D, branding, posters, and social content.</p>
+      </div>
 
-/* ===== EXPERIENCE ===== */
-.exp{
-  display:flex;
-  flex-direction:column;
-  gap:14px;
-}
+      <div class="grid">
 
-.expItem{
-  border:1px solid var(--line);
-  background: rgba(255,255,255,.05);
-  border-radius:18px;
-  padding:16px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.25);
-}
+        <!-- Card 1 Motion Video -->
+        <a class="card" href="video/Sequence 02.mp4" target="_blank">
+          <video class="thumbVideo"
+            src="video/Sequence 02.mp4"
+            autoplay
+            muted
+            loop
+            playsinline
+            preload="metadata">
+          </video>
+          <div class="meta">
+            <strong>Motion Graphic</strong>
+            <span>Demo reel • Click to watch full</span>
+          </div>
+        </a>
 
-.expTop{
-  display:flex;
-  align-items:baseline;
-  justify-content:space-between;
-  gap:14px;
-  flex-wrap:wrap;
-}
+        <!-- Card 2 3D Gallery -->
+        <div class="card posterCard">
+          <div class="posterGallery">
+            <a href="image/Ritysak_portfolio-19.jpg" target="_blank"><img src="image/Ritysak_portfolio-19.jpg" alt="3D work"></a>
+            <a href="image/Ritysak_portfolio-20.jpg" target="_blank"><img src="image/Ritysak_portfolio-20.jpg" alt="3D work"></a>
+            <a href="image/Ritysak_portfolio-21.jpg" target="_blank"><img src="image/Ritysak_portfolio-21.jpg" alt="3D work"></a>
+            <a href="image/Ritysak_portfolio-22.jpg" target="_blank"><img src="image/Ritysak_portfolio-22.jpg" alt="3D work"></a>
+          </div>
+          <div class="meta">
+            <strong>3D</strong>
+            <span>Swipe to view</span>
+          </div>
+        </div>
 
-.expTop strong{ font-size:16px; }
+        <!-- Card 3 Poster Gallery -->
+        <div class="card posterCard">
+          <div class="posterGallery">
+            <a href="image/Ritysak_portfolio-05.jpg" target="_blank"><img src="image/Ritysak_portfolio-05.jpg" alt="Poster"></a>
+            <a href="image/Ritysak_portfolio-06.jpg" target="_blank"><img src="image/Ritysak_portfolio-06.jpg" alt="Poster"></a>
+            <a href="image/Ritysak_portfolio-07.jpg" target="_blank"><img src="image/Ritysak_portfolio-07.jpg" alt="Poster"></a>
+            <a href="image/Ritysak_portfolio-08.jpg" target="_blank"><img src="image/Ritysak_portfolio-08.jpg" alt="Poster"></a>
+            <a href="image/Ritysak_portfolio-09.jpg" target="_blank"><img src="image/Ritysak_portfolio-09.jpg" alt="Poster"></a>
+            <a href="image/Ritysak_portfolio-10.jpg" target="_blank"><img src="image/Ritysak_portfolio-10.jpg" alt="Poster"></a>
+            <a href="image/Ritysak_portfolio-11.jpg" target="_blank"><img src="image/Ritysak_portfolio-11.jpg" alt="Poster"></a>
+            <a href="image/Ritysak_portfolio-12.jpg" target="_blank"><img src="image/Ritysak_portfolio-12.jpg" alt="Poster"></a>
+            <a href="image/Ritysak_portfolio-13.jpg" target="_blank"><img src="image/Ritysak_portfolio-13.jpg" alt="Poster"></a>
+          </div>
+          <div class="meta">
+            <strong>Poster Design</strong>
+            <span>Swipe to view</span>
+          </div>
+        </div>
 
-.expTop span{
-  color:var(--muted);
-  font-size:13px;
-}
+        <!-- Card 4 Branding -->
+        <a class="card" href="image/Rebanding.jpg" target="_blank">
+          <img class="thumbImg" src="image/Rebanding.jpg" alt="Brand Identity">
+          <div class="meta">
+            <strong>Brand Identity</strong>
+            <span>Logo • Guidelines • Visual System</span>
+          </div>
+        </a>
 
-.expItem p{
-  margin:10px 0 0;
-  color:var(--muted);
-  line-height:1.7;
-}
+      </div>
+    </section>
 
-.expBullets{
-  margin:10px 0 0;
-  padding-left:18px;
-  color:var(--muted);
-  line-height:1.9;
-}
+    <!-- ABOUT -->
+    <section id="about" class="section">
+      <div class="sectionHead">
+        <h3>About</h3>
+      </div>
 
-/* ===== GRID ===== */
-.grid{
-  margin-top:18px;
-  display:grid;
-  grid-template-columns: repeat(2, minmax(0,1fr));
-  gap:16px;
-}
+      <div class="about">
+        <p>
+          I’m a designer focused on visual storytelling. I combine marketing thinking
+          with strong visuals to help brands communicate clearly and attract attention.
+        </p>
 
-/* ===== CARD BASE ===== */
-.card{
-  aspect-ratio: 1 / 1;
-  border:1px solid var(--line);
-  background: rgba(255,255,255,.05);
-  border-radius:18px;
-  overflow:hidden;
-  box-shadow: 0 10px 30px rgba(0,0,0,.25);
-  transition: transform .18s ease, border-color .18s ease, background .18s ease, box-shadow .18s ease;
-  display:flex;
-  flex-direction:column;
-}
+        <ul class="bullets">
+          <li>Motion graphics for ads & social media</li>
+          <li>3D mockups & logo animation</li>
+          <li>Poster campaigns & marketing visuals</li>
+          <li>Brand identity systems</li>
+        </ul>
+      </div>
+    </section>
 
-.card:hover{
-  transform: translateY(-6px) scale(1.02);
-  border-color: rgba(255,255,255,.24);
-  background: rgba(255,255,255,.07);
-  box-shadow: 0 20px 60px rgba(0,0,0,.6);
-}
+    <!-- BRANDS -->
+    <section id="brands" class="brandsSection">
+      <h3 class="brandsTitle">Brands I’ve Worked With</h3>
 
-/* Thumb area should fill card */
-.thumbImg,
-.thumbVideo,
-.posterGallery{
-  flex: 1;
-  min-height: 0;
-}
+      <img
+        src="image/Brands I’ve Worked With.png"
+        alt="Brands I've worked with"
+        class="brandsImg"
+      />
+    </section>
 
-/* Video thumb */
-.thumbVideo{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-  background:#111;
-}
+    <!-- CONTACT -->
+    <section id="contact" class="section">
+      <div class="sectionHead">
+        <h3>Contact</h3>
+        <p>Send me a message — I reply fast.</p>
+      </div>
 
-/* Image thumb */
-.thumbImg{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-  background:#111;
-}
+      <div class="contact">
+        <a class="btn" href="mailto:dayka0446@gmail.com">Email Me</a>
+        <a class="ghost" href="https://www.tiktok.com/@dayka_seven" target="_blank">TikTok</a>
+        <a class="ghost" href="https://www.linkedin.com/in/ritysak-phai-5a09993a9/" target="_blank">LinkedIn</a>
+        <a class="ghost" href="https://wa.me/85569779566" target="_blank">WhatsApp</a>
+      </div>
+    </section>
 
-/* ===== Poster/3D gallery (scroll works) ===== */
-.posterGallery{
-  display:flex;
-  overflow-x:auto;
-  overflow-y:hidden;
-  scroll-snap-type:x mandatory;
-  -webkit-overflow-scrolling: touch;
-}
+  </main>
 
-.posterGallery a{
-  flex: 0 0 100%;
-  height:100%;
-  scroll-snap-align:start;
-  display:block;
-}
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>© <span id="y"></span> Ritysak • CTRL Z</p>
+  </footer>
 
-.posterGallery img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-}
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
 
-/* Optional: hide scrollbar */
-.posterGallery::-webkit-scrollbar{ height:0; }
+    const glow = document.getElementById("cursorGlow");
+    window.addEventListener("mousemove", (e) => {
+      glow.style.left = e.clientX + "px";
+      glow.style.top  = e.clientY + "px";
+    });
+  </script>
 
-/* ===== Meta footer inside cards ===== */
-.meta{
-  padding:12px 14px;
-  border-top:1px solid rgba(255,255,255,.10);
-  display:flex;
-  flex-direction:column;
-  gap:4px;
-}
-
-.meta strong{ font-size:14px; }
-.meta span{ font-size:12px; color:var(--muted); }
-
-/* ===== ABOUT ===== */
-.about p{
-  margin:0 0 14px;
-  color:var(--muted);
-  line-height:1.7;
-  max-width: 800px;
-}
-
-.bullets{
-  margin:0;
-  padding-left:18px;
-  color:var(--muted);
-  line-height:1.9;
-}
-
-/* ===== BRANDS (FIXED + CENTERED) ===== */
-.brandsSection{
-  padding: 14px 0 70px;        /* 🔧 control spacing around brands */
-  text-align: center;
-}
-
-.brandsTitle{
-  margin: 0 0 8px;             /* 🔧 title close to logos */
-  font-size: 26px;
-  text-align: center;
-}
-
-.brandsImg{
-  width: 100%;
-  max-width: 1050px;           /* 🔧 bigger logos */
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-/* ===== CONTACT ===== */
-.contact{
-  display:flex;
-  gap:12px;
-  flex-wrap:wrap;
-  align-items:center;
-}
-
-/* ===== FOOTER ===== */
-.footer{
-  text-align:center;
-  padding:40px 0;
-  color:var(--muted);
-}
-
-/* ===== RESPONSIVE ===== */
-@media (max-width: 820px){
-  .grid{ grid-template-columns: 1fr; }
-  .hero h2{ font-size: 34px; }
-  .brandsTitle{ font-size: 22px; }
-}
+</body>
+</html>
