--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             <a href="image/Ritysak_portfolio-22.jpg" target="_blank"><img src="image/Ritysak_portfolio-22.jpg" alt="3D work"></a>
           </div>
           <div class="meta">
-            <strong>3D</strong>
-            <span>Swipe to view</span>
+            <strong>3D (Swipe to view)</strong>
+            <span>3D Design • 3D animation</span>
           </div>
         </div>
 
@@ -173,8 +173,8 @@
             <a href="image/Ritysak_portfolio-13.jpg" target="_blank"><img src="image/Ritysak_portfolio-13.jpg" alt="Poster"></a>
           </div>
           <div class="meta">
-            <strong>Poster Design</strong>
-            <span>Swipe to view</span>
+            <strong>Poster Design (Swipe to view)</strong>
+            <span>Marketing • Posters • Brand Content</span>
           </div>
         </div>
 
