--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
       <div class="contact">
         <a class="btn" href="mailto:dayka0446@gmail.com">Email Me</a>
-        <a class="ghost" href="https://www.tiktok.com/@dayka_seven" target="_blank">TikTok</a>
+        <a class="ghost" href="https://www.tiktok.com/@ritysak07?is_from_webapp=1&sender_device=pc" target="_blank">TikTok</a>
         <a class="ghost" href="https://www.linkedin.com/in/ritysak-phai-5a09993a9/" target="_blank">LinkedIn</a>
         <a class="ghost" href="https://wa.me/85569779566" target="_blank">WhatsApp</a>
         <a class="ghost" href=https://www.instagram.com/ritysak07/ target="_blank">instagram</a>
