--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
 
       <div class="about">
         <p>
-          I’m a designer focused on visual storytelling. I combine marketing thinking
-          with strong visuals to help brands communicate clearly and attract attention.
+         I’m Ritysak, a multidisciplinary designer focused on visual storytelling. I combine marketing strategy with strong visuals to help brands communicate clearly, attract attention, and stand out in competitive markets.
+With experience in motion graphics, 3D design, branding, and marketing content, I create visuals that don’t just look good — they drive engagement, recognition, and results.
         </p>
 
         <ul class="bullets">
