--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- HERO -->
     <section class="hero">
-      <h2>Design that grabs attention and drives results.</h2>
+      <h2>Visual design, motion, and 3D that elevate brands.</h2>
       <p>
         I create motion graphics, 3D visuals, and branding that help businesses
         stand out, tell their story, and connect with their audience.
