--- a/index.html
+++ b/index.html
@@ -198,9 +198,7 @@
 
       <div class="about">
         <p>
-         I’m Ritysak, a multidisciplinary designer focused on visual storytelling. I combine marketing strategy with strong visuals to help brands communicate clearly, attract attention, and stand out in competitive markets.
-
-          With experience in motion graphics, 3D design, branding, and marketing content, I create visuals that don’t just look good — they drive engagement, recognition, and results.
+         ’m Ritysak, a multidisciplinary designer focused on visual storytelling. I combine marketing strategy with strong visuals to help brands communicate clearly, attract attention, and stand out in competitive markets. With experience in motion graphics, 3D design, and branding, I create work that not only looks compelling but also drives engagement and meaningful results.
         </p>
 
         <ul class="bullets">
