--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
       <div class="about">
         <p>
-         ’m Ritysak, a multidisciplinary designer focused on visual storytelling. I combine marketing strategy with strong visuals to help brands communicate clearly, attract attention, and stand out in competitive markets. With experience in motion graphics, 3D design, and branding, I create work that not only looks compelling but also drives engagement and meaningful results.
+         I’m Ritysak, a multidisciplinary designer focused on visual storytelling. I combine marketing strategy with strong visuals to help brands communicate clearly, attract attention, and stand out in competitive markets. With experience in motion graphics, 3D design, and branding, I create work that not only looks compelling but also drives engagement and meaningful results.
         </p>
 
         <ul class="bullets">
