--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <a class="ghost" href="https://www.linkedin.com/in/ritysak-phai-5a09993a9/" target="_blank">LinkedIn</a>
         <a class="ghost" href="https://wa.me/85569779566" target="_blank">WhatsApp</a>
         <a class="ghost" href=https://www.instagram.com/ritysak07/ target="_blank">instagram</a>
-        <a class="ghost" href=https://x.com/rity_sak/" target="_blank">x.com</a>
+        <a class="ghost" href="https://x.com/rity_sak/" target="_blank">x.com</a>
       </div>
     </section>
 
