--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ritysak — Designer</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="image/favicon.png" type="image/png">
 </head>
 
 <body>
